# pycat-napari

./: .env  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  DELETE_THESE.txt  LICENSE  MANIFEST.in  PKG-INFO  README.md  compare_image_readers.py  dnd_diag.py  ims_zarr_refs_probe.py  meta.yaml  pycat_config_20260628_175905.json  pycat_napari-1.0.0-py3-none-any.whl  pyproject.toml  test2.toml
.github/workflows/: core.yml  sync-test-and-pr.yml
.pycat/: high_water_mark.json
PyCAT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
assets/example analysis images/: Image 1 dapi.tif
assets/synthetic images/: In-Cellulo large puncta DAPI 1.tif  In-Cellulo large puncta Syn Img 1.tif  In-Cellulo small puncta DAPI 1.tif  In-Cellulo small puncta Syn Img 1.tif  In-Vitro Syn Img 1.tif
benchmarks/: README.md  __init__.py  cases.py  results.jsonl  run_suite.py
config/: README.md  pycat-devbio-napari-env-arm-mac.yaml  pycat-devbio-napari-env-x86-windows.yaml  pycat-napari-env-x86-windows.yaml  requirements-arm-mac.txt  requirements-base.txt  requirements-devbio-napari-arm-mac.txt
docs/audits/: DEV_NOTES.md  PyCAT_method_audit_2026-07-09.md  PyCAT_napari_integration_audit_2026-07-09.md  TODO_gui_verification_and_followons.md  bioio_migration_2026-07-13.md  brushing5_spec.md  brushing_roadmap_plotting_backends_2026-07-16.md  claude_code_BACKLOG_INDEX_2026-07-20.md  claude_code_handoff_vpt_gpu_2026-07-15.md  claude_code_spec_analysis_presets_2026-07-19.md  claude_code_spec_audit_quickwins_2026-07-16.md  claude_code_spec_auto_identity_stamping_2026-07-20.md  claude_code_spec_backend_parity_2026-07-20.md  claude_code_spec_background_mode_2026-07-19.md  claude_code_spec_batch_registry_decomposition_2026-07-19.md  claude_code_spec_biological_qc_2026-07-19.md  claude_code_spec_brushable_results_workspace_2026-07-22.md  claude_code_spec_brushing1_2026-07-15.md  claude_code_spec_brushing2_2026-07-16.md  claude_code_spec_brushing3_2026-07-16.md  claude_code_spec_brushing4_2026-07-16.md  claude_code_spec_brushing5_2026-07-16.md  claude_code_spec_cache_cleanup_startup_2026-07-23.md  claude_code_spec_calibration_deltag_2026-07-17.md  claude_code_spec_ci_hygiene_fixes_2026-07-21.md  claude_code_spec_ci_lane_dependency_contract_2026-07-23.md  claude_code_spec_close_partial_specs_2026-07-21.md  claude_code_spec_cohort_selection_2026-07-19.md  claude_code_spec_collapse_mode_and_test_guards_2026-07-23.md  claude_code_spec_comp_phenotyping_1_2026-07-17.md  claude_code_spec_comp_phenotyping_3_2026-07-19.md  claude_code_spec_complexity_ratchet_2026-07-15.md  claude_code_spec_condensate_modes_2026-07-19.md  claude_code_spec_condensate_physics_decomposition_2026-07-20.md  claude_code_spec_control_validation_2026-07-19.md  claude_code_spec_czi_2026-07-15.md  claude_code_spec_czi_seam_regression_2026-07-19.md  claude_code_spec_czi_sidecar_and_stack_identity_2026-07-23.md  claude_code_spec_dataset_identity_uuid_2026-07-20.md  claude_code_spec_deep_metadata_and_naming_2026-07-21.md  (+99 more)
docs/qc_gallery/: index.md
docs/source/: conf.py  contributing.rst  examples.rst  features.rst  index.rst  installation.rst  known_issues.md  modules.rst  pycat.data.rst  pycat.file_io.rst  pycat.rst  pycat.toolbox.rst  pycat.ui.rst  pycat.utils.rst  support.rst  usage.rst
docs/source/development/: contributing.rst  roadmap.rst  support.rst
docs/source/usage/: assumptions_and_limitations.rst  general_tools_guide.rst  index.rst  loading_and_saving.rst  measurement_guidance.rst  spatial_randomness.rst
docs/validation/: neck_geometry_and_elastocapillarity.md
notebooks/: Synthtic Data Generation NB.ipynb  pycat_conversion_factor_nb.ipynb  pycat_plotting.ipynb
pycat/: MANIFEST.in  central_manager.py  pycat_plotting.ipynb  run_pycat.py
pycat/data/: data_modules.py
pycat/file_io/: file_io.py
pycat/toolbox/: correlation_func_analysis_tools.py  feature_analysis_tools.py  label_and_mask_tools.py  pixel_wise_corr_analysis_tools.py
pycat/ui/: ui_modules.py
scripts/: czi_diagnostics.py
src/pycat/: batch_processor.py  batch_step_registry.py  central_manager.py  fix_tifffile.py  run_pycat.py
src/pycat/batch/: __init__.py
src/pycat/data/: data_modules.py
src/pycat/file_io/: __init__.py  czi_seam.py  dialogs.py  file_io.py  frap_io.py  image_reader.py  image_source.py  image_structure.py  lazy_guard.py  lazy_sources.py  load_channel_identity.py  local_cache.py  metadata_extract.py  (+19 more)
tests/: README.md  conftest.py  filter_sensitivity.py  fixtures_synthetic.py  imaging_realism.py  menu_contract_snapshot.json  route_equivalence.py  selection_view_contract.py  test_analysis_presets.py  test_analysis_progress_callback.py  test_anisotropic_voxel.py  test_app_mode.py  test_arm64_startup.py  test_auto_identity_stamping.py  test_axis_is_per_layer.py  test_background_mode.py  test_background_mode_ui.py  test_batch_brushing.py  test_batch_matches_the_recording.py  test_batch_step_map.py  test_batch_step_visibility.py  test_biological_qc.py  test_biological_qc_surfaced.py  test_brushable_table.py  test_brushable_workspace.py  test_brushing.py  test_brushing_interaction.py  test_busy_progress.py  test_cache_cleanup_startup.py  test_cache_menu_action.py  test_calibration.py  test_cell_label_spelling.py  test_cellular_brushable.py  test_channel_designations.py  test_channel_identity.py  test_channel_modality.py  test_channel_naming_filename.py  test_ci_dependencies.py  test_claim_scoping.py  test_classify_beads_characterization.py  (+242 more)
tests/Fixtures/: mmstack_20frames.tif
tests/navigator/: test_batch_step_composition.py  test_lightweight_catalog.py  test_loader_fixes.py  test_measurement_ops.py  test_navigator.py  test_navigator_execution.py  test_navigator_executor.py  test_navigator_reevaluate.py  test_navigator_session.py  test_navigator_templates.py  test_operation_graph.py  test_operation_requirements.py  test_operation_spec_matches_catalog.py  test_operations.py  test_phase3.py  test_quality_gate_planning.py  test_workbook.py
tools/: build_qc_gallery.py  check_for_dropped_code.py  run_core_tests.py
(+266 files in other folders)
