[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "pycat-napari"
version = "1.5.393"
description = "Python Condensate Analysis Toolbox - A napari-based tool for biomolecular condensate analysis"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE"}
include-package-data = true
authors = [
    {name = "Gable Wadsworth", email = "gablewad@buffalo.edu"},
    {name = "Christian Neureuter", email = "cneureut@buffalo.edu"}
]

keywords = [
    "condensate",
    "image analysis",
    "fluorescence",
    "microscopy",
    "napari",
    "bio-image",
    "scientific", 
    "pycat"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "aicsimageio>=4.14.0",
    "aicspylibczi>=3.0.5",
    "cellpose<4",
    "matplotlib",
    "napari",
    "numpy>=1.22,<2.0",
    "opencv-python-headless",
    "pandas",
    "pydantic",
    "pyqt5",
    "torch",
    "pywavelets",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "largestinteriorrectangle",
    "imaris-ims-file-reader",
    "av",
    "hdf5plugin",
    "numba",
    "seaborn",
    "simpleitk",
    "zarr>=2.12,<3.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda11x",
]
spatial = [
    "shapely",
]
stardist = [
    "stardist",
    "csbdeep",
]
trackmate = [
    "pyimagej",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "build",
    "twine",
    "pre-commit",
]

test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-qt",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

arm-mac = [
    "torchvision; platform_system=='Darwin' and platform_machine=='arm64'",
    # torch 2.1.2 has NO Python 3.12 wheel (3.12 support landed in torch 2.2.0),
    # but PyCAT requires Python >=3.12 — so the old exact ==2.1.2 pin made
    # `pip install pycat-napari[arm-mac]` fail with ResolutionImpossible on every
    # supported Python. Use a bounded range that has cp312 arm64 wheels while
    # staying within the torch range that still supports numpy<2.0 (matching the
    # numpy>=1.22,<2.0 pin above).
    "torch>=2.2.0,<2.3.0; platform_system=='Darwin' and platform_machine=='arm64'"
]

devbio-napari = [
    "devbio-napari"
]

[project.urls]
Homepage = "https://github.com/BanerjeeLab-repertoire/pycat-napari"
Repository = "https://github.com/BanerjeeLab-repertoire/pycat-napari"
Issues = "https://github.com/BanerjeeLab-repertoire/pycat-napari/issues"

[project.scripts]
run-pycat = "pycat.run_pycat:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pycat"]
exclude = ["build", "dist", "*.egg-info", "tests"]

[tool.hatch.build.targets.sdist]
# Hatchling ignores MANIFEST.in (that's a setuptools mechanism), so the sdist
# contents must be controlled here. Include only source, docs, and metadata;
# explicitly exclude VCS, caches, build artifacts, and OS cruft so the released
# tarball is clean (no .git/, __pycache__/, .DS_Store, .pytest_cache/, dist/, etc.).
include = [
    "src/pycat",
    "docs",
    "config",
    "notebooks",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "THIRD_PARTY_LICENSES.txt",
    "pyproject.toml",
]
exclude = [
    ".git",
    ".gitignore",
    ".github",
    "**/__pycache__",
    "**/*.py[cod]",
    "**/*.so",
    "**/*.dylib",
    "**/*.dll",
    "**/.DS_Store",
    "**/*.swp",
    "**/*.swo",
    ".vscode",
    ".mypy_cache",
    ".pytest_cache",
    "**/.ipynb_checkpoints",
    ".coverage",
    "build",
    "dist",
    "*.egg-info",
    "PKG-INFO",
]

[tool.hatch.build.targets.wheel.package-data]
pycat = [
    "src/pycat/icons/*.png",
    "LICENSE",
    "README.md", 
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "THIRD_PARTY_LICENSES.txt",
    "MANIFEST.in"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-v --cov=pycat --cov-report=term-missing"
testpaths = ["tests"]
qt_api = "pyqt5"
# Two test tiers. The scientific kernels must be verifiable WITHOUT a GUI stack --
# a viscosity calculation, an MSD fit or a colocalization coefficient should be
# checkable in a plain pytest run with no display, no Qt and no napari. Coupling them
# to a GUI import made that impossible, which is backwards: the numerical code is the
# part that most needs automated regression testing.
#
#   pytest -m core          -> no napari, no Qt, no GPU. Run on every commit.
#   pytest -m integration   -> viewer behaviour, file loading, Qt widgets.
markers = [
    "core: pure scientific kernels - no napari, no Qt, no GPU. Must pass headlessly.",
    "integration: requires napari/Qt/file-IO/GPU.",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
# `select`/`ignore` at top level are DEPRECATED in modern Ruff -- they belong under
# [tool.ruff.lint]. Left at the top level they are silently ignored, so the linter was
# not actually enforcing the rules it appeared to declare.
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

# The CORRECTNESS subset. These are not style opinions -- every one of them has found a
# real, shipped bug in this codebase:
#   F821 undefined name            -> `progress_emit`, `mask_name` (1.5.386)
#   F823 local used before assign  -> `QSizePolicy` UnboundLocalError (1.5.387)
#   F811 redefinition              -> duplicate run_expand_labels / resolve_measurement_source (1.5.388)
#   F601 repeated dict key         -> duplicate batch registry step (1.5.386)
#   F841 unused local              -> the residue of half-removed logic
#   B006 mutable default arg
#   B023 loop variable captured in a closure (a classic Qt-callback bug)
#   B904 raise-without-from inside except (destroys the original traceback)
#
# Run this subset in CI and treat it as a build failure. The rest of the ~2,390 Ruff
# findings are style/maintainability and should NOT be auto-fixed en masse -- a global
# `--fix` over a 7,000-line file_io.py is exactly how a working codebase gets broken.