[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "pycat-napari"
version = "1.6.326"
description = "Python Condensate Analysis Toolbox - A napari-based tool for biomolecular condensate analysis"
readme = "README.md"
# 3.13 is BLOCKED UPSTREAM, not by PyCAT's own code (which compiles and passes core on 3.13).
# cellpose 3 declares numpy<2.1; numpy ships no cp313 wheels below 2.1, so `pip install` on 3.13 walks
# numpy down to 2.0.2, attempts a source build, and dies for want of a C compiler. We pin cellpose<4
# because Cellpose 4 removed the cyto2 CNN models. Verified 2026-07-23: the cellpose pin is STALE
# (cellpose 3 segments byte-identically on numpy 2.3.5), so the unblock is UPSTREAM relaxing it — see
# docs/source/known_issues.md and MouseLand/cellpose#1095. Declaring 3.13 support that fails at install
# is worse than a clean refusal, so the ceiling matches what actually installs.
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE"}
include-package-data = true
authors = [
    {name = "Gable Wadsworth", email = "gablewad@buffalo.edu"},
    {name = "Christian Neureuter", email = "cneureut@buffalo.edu"}
]

keywords = [
    "condensate",
    "image analysis",
    "fluorescence",
    "microscopy",
    "napari",
    "bio-image",
    "scientific", 
    "pycat"
]

classifiers = [
    # Beta while the install matrix, Python-version support, and release pipeline are still stabilising —
    # the 3.13 situation (a declared ceiling that could not install, reverted in 1.6.302) shows the packaging
    # is not yet "stable". Revisit → Production/Stable when the clean-install matrix and a 3.13 lane are green.
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    # ── BioIO replaced aicsimageio in 1.6.0 ─────────────────────────────────────────
    #
    # ``aicsimageio`` is in **maintenance mode** and its maintainers name ``bioio`` as the
    # *compatible successor.* It is **frozen in 2023**, and its pins — ``zarr<2.16``,
    # ``tifffile<2023.3.15``, ``fsspec<2023.9``, ``lxml<5`` — are what held **numpy<2** and
    # **zarr<3** in place. ***Removing it FREES the pins rather than fighting them.***
    #
    # BioIO's readers are **separate packages.** That is a genuine improvement — a user who only
    # opens TIFFs no longer carries a CZI dependency — but it means **a missing plugin is a missing
    # FORMAT**, so the ones PyCAT actually opens are listed here, not left to chance.
    #
    # ``bioio-czi`` is **not optional**: Zeiss market share makes CZI non-negotiable.
    "bioio>=1.0",
    "bioio-ome-tiff",
    "bioio-tifffile",
    "bioio-czi",
    # ``bioio-imageio`` reads PNG/JPG/BMP. **Not optional**: PyCAT's OWN save path writes PNGs
    # (Cellpose masks, overlay exports), so reopening what PyCAT saved REQUIRES this reader. The
    # bioio migration silently dropped PNG support that aicsimageio had natively — without this
    # declared, a fresh install cannot reopen a saved mask ("bioio has no reader installed for
    # .png files"). See the bioio plugin registry: bioio-imageio → .jpg, .png.
    "bioio-imageio",
    "cellpose<4",
    "matplotlib",
    "napari",
    # ── numpy is UNPINNED at the top ────────────────────────────────────────────────
    #
    # ``numpy<2.0`` existed to satisfy **aicsimageio**, which is now gone. PyCAT's own code was
    # audited for numpy-2 removals (``np.float_``, ``np.NaN``, ``np.alltrue``, ...) and **is
    # clean** — zero occurrences.
    #
    # The remaining ceiling comes from **cellpose**, and that is a deliberate scientific choice,
    # not a technical one: PyCAT pins ``cellpose<4`` because Cellpose 4 **removed the cyto2 CNN**
    # and replaces it with a ViT-L transformer that is *very slow on CPU* — which matters for the
    # lab machines that do not have a GPU.
    "numpy>=1.22",
    "opencv-python-headless",
    "pandas",
    "pydantic",
    "pyqt5",
    "torch",
    "pywavelets",
    "scikit-image",
    "scikit-learn",
    # networkx: `fibril_tools` imports it at MODULE SCOPE (the skeleton-graph analysis is
    # built on it), and it was NEVER DECLARED. It has worked everywhere only because
    # scikit-image depends on it, so it arrives transitively — if skimage ever drops that
    # dependency, fibril analysis breaks for every user, on a clean install, with no warning.
    # A transitive dependency you rely on is a dependency you have not declared.
    "networkx",
    "scipy",
    # openpyxl: the Navigator's scientific question tree + module contracts are loaded from the shipped
    # `navigator/data/*.xlsx` workbooks at runtime (navigator/loader.py). Without it the whole guided-analysis
    # engine cannot construct — it was UNDECLARED, so the Navigator dock could never have worked on a clean
    # install even though the workbooks ship. A pure-Python, lightweight dependency.
    "openpyxl",
    "largestinteriorrectangle",
    "imaris-ims-file-reader",
    "av",
    "hdf5plugin",
    "numba",
    "seaborn",
    "simpleitk",
    # ── zarr is UNPINNED ────────────────────────────────────────────────────────────
    #
    # ``zarr<3.0`` existed to satisfy **aicsimageio** (which pinned ``<2.16``). The one class PyCAT
    # depended on — ``DirectoryStore`` — was renamed to ``LocalStore`` in zarr 3, and its path
    # moved from ``.path`` to ``.root``. Both are now handled by ``pycat.file_io.zarr_compat``,
    # which asks the **capability** question rather than the class one, and works on either.
    #
    # Every ``zarr.open`` call was AST-walked: only ``mode``, ``shape``, ``chunks`` and ``dtype``
    # are ever passed, and **all four survive in zarr 3.**
    "zarr>=2.12",
]

[project.optional-dependencies]

gpu = [
    "cupy-cuda11x",
]
# BioFormats-backed reader for Zeiss CZI files that libCZI (bioio-czi) CANNOT decode -- notably
# fast streaming/timelapse acquisitions, where every libCZI read raises "not implemented" even
# though ZEN opens the file. PyCAT reads pixels via the DIRECT BioFormats reader
# (readers/czi_bioformats.py: loci.formats.ImageReader.openBytes, ~5 ms/plane after a one-time
# ~33 s frame-index parse) -- NOT bioio's dask path, which measured 50-80 s/plane. It is OPT-IN
# because it pulls a JVM (scyjava/jgo/cjdk download a JRE on first use), far heavier than the rest
# of the stack.
#
# **bioio-bioformats MUST be pinned <2.0.** 2.0.0 depends on bffile, which requires numpy>=2.1 --
# and PyCAT pins numpy<2.1 (**cellpose 3 only** -- numba is NOT a constraint: numba 0.66 runs
# fine on numpy 2.3; see docs/source/known_issues.md), so `pip install ...[bioformats]` would be
# unresolvable. 1.3.x is the numpy-safe line. The `numpy<2.1` pin is repeated here as a belt so the
# extra can never trample the base env. (1.3.x bundles Java BioFormats 6.7.0, which cannot read
# these CZIs; PyCAT overrides the scyjava endpoint to formats-gpl:8.1.1 + the OME Maven repo at JVM
# start -- see readers/czi_bioformats.py.) See docs/audits/czi_bakeoff_2026-07-15.md.
bioformats = [
    "bioio-bioformats<2.0",
    "numpy<2.1",
]
# Plotly is OPTIONAL, and deliberately so.
#
# It is one of three plotting backends (matplotlib, seaborn, plotly -- see
# pycat.utils.plot_backends). matplotlib and seaborn are required, because PyCAT's figures are
# built with them. Plotly adds INTERACTIVE EXPLORATION -- zoom, pan, legend filtering, and a hover
# that carries the object's identity.
#
# What it does NOT add without more machinery is click-to-napari: a click inside a plotly figure
# lives in JavaScript, and reaching Python needs QtWebEngine -- a heavy dependency and a real risk
# in an app that already has a user hitting Qt/OpenGL rendering failures. So the click is an
# opt-in upgrade, and the hover carries the identity in the meantime.
plotly = [
    "plotly",
]
# The click->napari bridge for plotly. Heavy (~100 MB) and a common source of Qt install trouble;
# install it only if the plotly click is actually wanted.
plotly-interactive = [
    "plotly",
    "PyQtWebEngine",
]
# The native-Qt interactive plot backend (the "explore" backend). Same event loop as napari, so a
# click is a Qt signal with no WebEngine bridge; fast at large N. Optional — PyCAT runs without it and
# only offers the 'pyqtgraph' backend when it is installed.
pyqtgraph = [
    "pyqtgraph",
]
spatial = [
    "shapely",
]
stardist = [
    "stardist",
    "csbdeep",
]
trackmate = [
    "pyimagej",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "build",
    "twine",
    "pre-commit",
]

test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-qt",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

arm-mac = [
    "torchvision; platform_system=='Darwin' and platform_machine=='arm64'",
    # torch 2.1.2 has NO Python 3.12 wheel (3.12 support landed in torch 2.2.0),
    # but PyCAT requires Python >=3.12 — so the old exact ==2.1.2 pin made
    # `pip install pycat-napari[arm-mac]` fail with ResolutionImpossible on every
    # supported Python. Use a bounded range that has cp312 arm64 wheels while
    # staying within the torch range that still supports numpy<2.0 (matching the
    # numpy>=1.22 base pin above).
    #
    # NOTE (2026-07-23): earlier wording here cited a base ``numpy>=1.22,<2.0`` pin. That pin no
    # longer exists -- the base is ``numpy>=1.22``, unbounded. Re-derive this ceiling from current
    # compatibility testing before trusting it. See docs/source/known_issues.md.
    "torch>=2.2.0,<2.3.0; platform_system=='Darwin' and platform_machine=='arm64'"
]

devbio-napari = [
    "devbio-napari"
]

[project.urls]
Homepage = "https://github.com/BanerjeeLab-repertoire/pycat-napari"
Repository = "https://github.com/BanerjeeLab-repertoire/pycat-napari"
Issues = "https://github.com/BanerjeeLab-repertoire/pycat-napari/issues"

[project.scripts]
run-pycat = "pycat.run_pycat:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pycat"]
exclude = ["build", "dist", "*.egg-info", "tests", "**/.DS_Store"]

[tool.hatch.build.targets.sdist]
# Hatchling ignores MANIFEST.in (that's a setuptools mechanism), so the sdist
# contents must be controlled here. Include only source, docs, and metadata;
# explicitly exclude VCS, caches, build artifacts, and OS cruft so the released
# tarball is clean (no .git/, __pycache__/, .DS_Store, .pytest_cache/, dist/, etc.).
include = [
    "src/pycat",
    "config",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "THIRD_PARTY_LICENSES.txt",
    "pyproject.toml",
    # NB: `docs` (18 MB, mostly screenshots) and `notebooks` (816 KB) are deliberately NOT shipped in
    # the sdist — they live in the git repo and the published docs site; a `pip install` does not need
    # them, and they were the dominant PyPI-quota cost (~25 MB → ~7 MB per release). See
    # tests/test_distribution_size.py, which fails if either is re-added here.
]
exclude = [
    ".git",
    ".gitignore",
    ".github",
    "**/__pycache__",
    "**/*.py[cod]",
    "**/*.so",
    "**/*.dylib",
    "**/*.dll",
    "**/.DS_Store",
    "**/*.swp",
    "**/*.swo",
    ".vscode",
    ".mypy_cache",
    ".pytest_cache",
    "**/.ipynb_checkpoints",
    ".coverage",
    "build",
    "dist",
    "*.egg-info",
    "PKG-INFO",
]

[tool.hatch.build.targets.wheel.package-data]
pycat = [
    # The layer-binding table. **It is DATA, and it must ship** — without it the resolver falls
    # back to an empty table and every dropdown stops autopopulating, silently, in the installed
    # package while working perfectly in the repo.
    "src/pycat/utils/*.json",
    "src/pycat/icons/*.png",
    "LICENSE",
    "README.md", 
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "THIRD_PARTY_LICENSES.txt",
    "MANIFEST.in"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-v --cov=pycat --cov-report=term-missing"
testpaths = ["tests"]
# Run `pytest` from a fresh clone WITHOUT `PYTHONPATH=src`. This is a source-lane convenience only, and it is
# BACKED by the `wheel` CI job in .github/workflows/core.yml, which runs the same `-m core` suite against the
# INSTALLED wheel (`-o pythonpath=` there clears this so `import pycat` resolves to the artifact, not src/).
# So `pythonpath` cannot hide a packaging error: the source lane and the wheel lane must agree.
pythonpath = ["src"]
# qt_api is consumed by pytest-qt (the `integration` lane and local `.[test]` runs). In the minimal
# headless `core` lane pytest-qt is absent, so pytest emits a harmless "Unknown config option: qt_api"
# warning there — acceptable, because that lane no longer ERRORS on Qt (the Qt tests are `integration`).
qt_api = "pyqt5"
# Two test tiers. The scientific kernels must be verifiable WITHOUT a GUI stack --
# a viscosity calculation, an MSD fit or a colocalization coefficient should be
# checkable in a plain pytest run with no display, no Qt and no napari. Coupling them
# to a GUI import made that impossible, which is backwards: the numerical code is the
# part that most needs automated regression testing.
#
# Tiered so compatibility testing is diagnostic — the FIRST lane to run under a new interpreter is `core`,
# which needs almost nothing, so it isolates "does the interpreter work" from "is the scientific stack
# installable" (exactly what the Python 3.13 investigation lacked). Deps grow monotonically down the list.
#
#   pytest -m core            -> stdlib + numpy ONLY. No scientific stack, no napari, no Qt, no GPU.
#   pytest -m "core or base"  -> the full headless suite (adds scipy/scikit-image/pandas/matplotlib/... ).
#   pytest -m integration     -> viewer behaviour, file loading, Qt widgets.
#
# The core/base line is EMPIRICAL, not guessed: a test is `core` only if it passes in a numpy+pytest-only
# venv (verified 2026-07-23 — 646 tests across ~118 files); anything that needs the scientific stack (at
# import or at runtime) is `base`. Mis-marking toward `base` is harmless (the `core or base` lane covers it);
# a `core` test that needs more fails the minimal lane, which is how a bad mark is caught.
markers = [
    "core: minimal — stdlib + numpy ONLY. No scientific stack, no napari, no Qt, no GPU. The first lane under a new interpreter.",
    "base: headless but needs the declared base scientific stack (scipy/scikit-image/pandas/matplotlib/opencv/simpleitk/seaborn/networkx/scikit-learn). No napari, no Qt, no GPU.",
    "integration: requires napari/Qt/file-IO — a real viewer, widgets, or readers.",
    "gui: requires napari/Qt (a QApplication or live widgets).",
    "optional: requires an optional extra (plotly, stardist, bioformats, pyqtgraph, ...).",
    "slow: long-running; run deliberately, not on every push.",
    "gpu: requires a CUDA GPU (cupy / torch-cuda).",
    "benchmark: standing per-release validation suite; run deliberately, not on every commit (see benchmarks/).",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
# `select`/`ignore` at top level are DEPRECATED in modern Ruff -- they belong under
# [tool.ruff.lint]. Left at the top level they are silently ignored, so the linter was
# not actually enforcing the rules it appeared to declare.
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

# The CORRECTNESS subset. These are not style opinions -- every one of them has found a
# real, shipped bug in this codebase:
#   F821 undefined name            -> `progress_emit`, `mask_name` (1.5.386)
#   F823 local used before assign  -> `QSizePolicy` UnboundLocalError (1.5.387)
#   F811 redefinition              -> duplicate run_expand_labels / resolve_measurement_source (1.5.388)
#   F601 repeated dict key         -> duplicate batch registry step (1.5.386)
#   F841 unused local              -> the residue of half-removed logic
#   B006 mutable default arg
#   B023 loop variable captured in a closure (a classic Qt-callback bug)
#   B904 raise-without-from inside except (destroys the original traceback)
#
# Run this subset in CI and treat it as a build failure. The rest of the ~2,390 Ruff
# findings are style/maintainability and should NOT be auto-fixed en masse -- a global
# `--fix` over a 7,000-line file_io.py is exactly how a working codebase gets broken.